feat: 添加井子棋注释

--- a/Week 01/TicTacToe/index.html
+++ b/Week 01/TicTacToe/index.html
@@ -30,6 +30,7 @@
     <body>
         <div id="board"></div>
         <script>
+            // todo 和棋提示，重置
             window.onload = () => {
                 const $ = (props) => document.querySelector(props);
                 const clone = (obj) => JSON.parse(JSON.stringify(obj));
