--- a/Week 02/map/index.html
+++ b/Week 02/map/index.html
@@ -6,8 +6,8 @@
         <title>地图编辑器</title>
         <style>
             :root {
-                --cell-width: 8px;
-                --cell-height: 8px;
+                --cell-width: 7px;
+                --cell-height: 7px;
 
                 --theme-color: #9c9c9c;
             }
@@ -34,29 +34,48 @@
     <script>
         window.onload = () => {
             const $ = (props) => document.querySelector(props);
+            const sleep = (timeout) => {
+                new Promise((resolve) => {
+                    setTimeout(() => {
+                        resolve();
+                    }, timeout);
+                });
+            };
 
             const MAP_DATA = 'MAP_DATA';
+            const MAP_X = 100;
+            const MAP_Y = 100;
+            const COLOR_CONFIG = {
+                1: '#fff',
+                2: '#3f51b5',
+                3: '#ff1100',
+                4: '#000',
+                5: '#FFEB3B',
+            };
 
             const container = $('#container');
-            const offlineData = localStorage.getItem(MAP_DATA);
-            let mapData = offlineData ? JSON.parse(offlineData) : Array(100 * 100).fill(0);
 
-            let isMouseDown = false;
+            const offlineData = localStorage.getItem(MAP_DATA);
+            let mapData = offlineData ? JSON.parse(offlineData) : Array(MAP_X * MAP_Y).fill(0);
+
             let clear = false;
+            let isMouseDown = false;
             let timeoutRecord = undefined;
 
             const renderMap = () => {
-                for (let x = 0; x < 100; x++) {
-                    for (let y = 0; y < 100; y++) {
-                        const element = mapData[x * 100 + y];
+                container.innerText = '';
+
+                for (let x = 0; x < MAP_X; x++) {
+                    for (let y = 0; y < MAP_Y; y++) {
+                        const index = x * MAP_X + y;
+                        const element = mapData[index];
+
                         let cell = document.createElement('div');
                         cell.setAttribute('class', 'cell');
 
-                        if (element === 1) {
-                            cell.style.setProperty('background', '#fff');
-                        }
+                        cell.style.setProperty('background', COLOR_CONFIG[element]);
 
-                        const setMapDataFn = () => {
+                        const setOfflineMapData = () => {
                             timeoutRecord = setTimeout(() => {
                                 localStorage.setItem(MAP_DATA, JSON.stringify(mapData));
                             }, 300);
@@ -64,7 +83,7 @@
 
                         cell.addEventListener('mouseover', () => {
                             if (isMouseDown) {
-                                mapData[x * 100 + y] = clear ? 0 : 1;
+                                mapData[index] = clear ? 0 : 1;
 
                                 cell.style.setProperty(
                                     'background',
@@ -72,10 +91,10 @@
                                 );
                                 if (timeoutRecord) {
                                     clearTimeout(timeoutRecord);
-                                    setMapDataFn();
+                                    setOfflineMapData();
                                     return;
                                 }
-                                setMapDataFn();
+                                setOfflineMapData();
                             }
                         });
 
@@ -98,13 +117,39 @@
 
             const clearButton = $('#clear');
             clearButton.addEventListener('click', () => {
-                mapData = Array(100 * 100).fill(0);
-                container.innerText = '';
+                mapData = Array(MAP_X * MAP_Y).fill(0);
                 localStorage.removeItem(MAP_DATA);
                 renderMap();
             });
 
-            const path = () => {};
+            path = (start, end) => {
+                const queue = [start];
+
+                console.time('path');
+                const insert = async (x, y) => {
+                    if (x < 0 || x > MAP_X) return;
+                    if (y < 0 || y > MAP_Y) return;
+                    if (mapData[x * MAP_X + y] !== 0) {
+                        return;
+                    }
+
+                    mapData[x * MAP_X + y] = 2;
+                    queue.push([x, y]);
+                };
+
+                while (queue.length) {
+                    let [x, y] = queue.shift();
+                    if (x === end[0] && y === end[1]) {
+                        break;
+                    }
+                    insert(x + 1, y);
+                    insert(x, y + 1);
+                    insert(x - 1, y);
+                    insert(x, y - 1);
+                }
+
+                console.timeEnd('path');
+            };
         };
     </script>
 </html>
