--- a/Week 02/map/index.html
+++ b/Week 02/map/index.html
@@ -8,13 +8,6 @@
             :root {
                 --cell-width: 7px;
                 --cell-height: 7px;
-
-                --base-color: #9c9c9c;
-                --start-color: #ffe4c4;
-                --end-color: #ffff00;
-                --path-color: #ff6a6a;
-                --traverse-color: #4876ff;
-                --obstacles-color: #fff;
             }
 
             #container {
@@ -29,22 +22,22 @@
             }
 
             .cell_base {
-                background: var(--base-color);
+                background: #9c9c9c;
             }
             .cell_start {
-                background: var(--start-color);
+                background: #ffe4c4;
             }
             .cell_end {
-                background: var(--end-color);
+                background: #ffff00;
             }
             .cell_path {
-                background: var(--path-color);
+                background: #ff6a6a;
             }
             .cell_traverse {
-                background: var(--traverse-color);
+                background: #4876ff;
             }
             .cell_obstacles {
-                background: var(--obstacles-color);
+                background: #fff;
             }
         </style>
     </head>
@@ -65,6 +58,7 @@
             const MAP_DATA = 'MAP_DATA';
             const MAP_X = 100;
             const MAP_Y = 100;
+            // todo 使用symbol 优化代码，消除魔术数字
             const CLASS_MAP = {
                 0: 'cell_base',
                 1: 'cell_obstacles',
@@ -87,38 +81,34 @@
             let timeoutRecord = undefined;
 
             const renderMap = () => {
-                for (let y = 0; y < MAP_Y; y++) {
-                    for (let x = 0; x < MAP_X; x++) {
-                        const index = x + y * MAP_Y;
-                        const element = mapData[index];
+                for (let index = 0; index < MAP_X * MAP_Y; index++) {
+                    const element = mapData[index];
+                    let cell = document.createElement('div');
+                    cell.setAttribute('class', CLASS_MAP[element]);
 
-                        let cell = document.createElement('div');
-                        cell.setAttribute('class', CLASS_MAP[element]);
+                    const setOfflineMapData = () => {
+                        timeoutRecord = setTimeout(() => {
+                            localStorage.setItem(MAP_DATA, JSON.stringify(mapData));
+                        }, 300);
+                    };
 
-                        const setOfflineMapData = () => {
-                            timeoutRecord = setTimeout(() => {
-                                localStorage.setItem(MAP_DATA, JSON.stringify(mapData));
-                            }, 300);
-                        };
+                    const onMouseOver = () => {
+                        if (isMouseDown) {
+                            mapData[index] = clear ? 0 : 1;
 
-                        const onMouseOver = () => {
-                            if (isMouseDown) {
-                                mapData[index] = clear ? 0 : 1;
-
-                                if (clear) {
-                                    cell.setAttribute('class', 'cell_base');
-                                } else {
-                                    cell.setAttribute('class', 'cell_obstacles');
-                                }
-
-                                timeoutRecord && clearTimeout(timeoutRecord);
-                                setOfflineMapData();
+                            if (clear) {
+                                cell.setAttribute('class', 'cell_base');
+                            } else {
+                                cell.setAttribute('class', 'cell_obstacles');
                             }
-                        };
 
-                        cell.addEventListener('mouseover', onMouseOver);
-                        container.appendChild(cell);
-                    }
+                            timeoutRecord && clearTimeout(timeoutRecord);
+                            setOfflineMapData();
+                        }
+                    };
+
+                    cell.addEventListener('mouseover', onMouseOver);
+                    container.appendChild(cell);
                 }
             };
             renderMap();
@@ -148,12 +138,47 @@
                 container.children[position].setAttribute('class', CLASS_MAP[val]);
             };
 
+            class Queue {
+                constructor(start, end) {
+                    this.start = start;
+                    this.end = end;
+                    this.data = [start];
+                }
+
+                get length() {
+                    return this.data.length;
+                }
+                push(val) {
+                    this.data.push(val);
+                }
+
+                shift() {
+                    const distance = (start, end) =>
+                        (end[0] - start[0]) ** 2 + (end[1] - start[1]) ** 2;
+
+                    let min = this.data[0];
+                    let minIndex = 0;
+                    for (let index = 0; index < this.data.length; index++) {
+                        const currentPoint = this.data[index];
+
+                        if (distance(currentPoint, this.end) < distance(min, this.end)) {
+                            min = currentPoint;
+                            minIndex = index;
+                        }
+                    }
+
+                    this.data[minIndex] = this.data[this.data.length - 1];
+                    this.data.pop();
+                    return min;
+                }
+            }
+
             let path = [];
             let pathMap = {};
             findPath = async (start, end) => {
                 updateCell(start[0] + start[1] * MAP_Y, 2);
 
-                const queue = [start];
+                let queue = new Queue(start, end);
                 const insert = async (x, y, pre) => {
                     if (x < 0 || x >= MAP_X || y < 0 || y >= MAP_Y) return;
 
@@ -163,11 +188,13 @@
 
                     pathMap[index] = pre;
                     updateCell(index, 5);
+                    await sleep(0);
                     queue.push([x, y]);
                 };
 
                 while (queue.length) {
                     let [x, y] = queue.shift();
+
                     const index = x + y * MAP_Y;
 
                     if (x === end[0] && y === end[1]) {
