--- a/Week 03/LLAST/index.html
+++ b/Week 03/LLAST/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>LL AST</title>
+        <title>使用LL算法构建AST|LL语法分析（二）</title>
     </head>
+
     <body>
         <script>
             const regexp = /([0-9\.]+)|([ \t]+)|([\r\n]+)|(\*)|(\/)|(\+)|(\-)/g;
@@ -12,33 +12,143 @@
             const dictionary = ['Number', 'Whitespace', 'LineTerminator', '*', '/', '+', '-'];
 
             function* tokenize(source) {
-                let lastIndex = 0;
-                while (true) {
+                let result = null,
+                    lastIndex = 0;
+                do {
                     lastIndex = regexp.lastIndex;
-                    let result = regexp.exec(source);
+                    result = regexp.exec(source);
                     if (!result) break;
+
                     if (regexp.lastIndex - lastIndex > result[0].length) break;
 
                     let token = {
                         type: null,
                         value: null,
                     };
-                    for (let i = 1; i < dictionary.length; i++) {
-                        if (result[i]) {
-                            console.log(dictionary[i - 1]);
-                            token.type = dictionary[i - 1];
-                        }
+
+                    for (let i = 1; i <= dictionary.length; i++) {
+                        if (result[i]) token.type = dictionary[i - 1];
                     }
                     token.value = result[0];
+
                     yield token;
+                } while (result);
+
+                yield { type: 'EOF' };
+            }
+
+            let source = [];
+            for (let token of tokenize('1 + 2 + 3')) {
+                if (token.type !== 'Whitespace' && token.type !== 'LineTerminator')
+                    source.push(token);
+            }
+
+            function Expression() {}
+            function AdditiveExpression(source) {
+                if (source[0].type === 'Number') {
+                    let node = {
+                        type: 'AdditiveExpression',
+                        children: source[0],
+                    };
+                    source[0] = node;
+                    return AdditiveExpression(source);
                 }
-                yield {
-                    type: 'EOF',
-                };
+
+                if (
+                    source[0].type === 'AdditiveExpression' &&
+                    source[1] &&
+                    source[1].type === '+'
+                ) {
+                    let node = {
+                        type: 'AdditiveExpression',
+                        operator: '+',
+                        children: [],
+                    };
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    MultiplicativeExpression(source);
+                    node.children.push(source.shift());
+                    source.unshift(node);
+                    return AdditiveExpression(source);
+                }
+
+                if (
+                    source[0].type === 'AdditiveExpression' &&
+                    source[1] &&
+                    source[1].type === '-'
+                ) {
+                    let node = {
+                        type: 'AdditiveExpression',
+                        operator: '-',
+                        children: [],
+                    };
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    MultiplicativeExpression(source);
+                    node.children.push(source.shift());
+                    source.unshift(node);
+                    return AdditiveExpression(source);
+                }
+
+                if (source[0].type === 'AdditiveExpression') {
+                    return source[0];
+                }
+
+                MultiplicativeExpression(source);
+                return AdditiveExpression(source);
             }
-            for (let token of tokenize('1024 + 10 * 25')) {
-                console.log(token);
+            function MultiplicativeExpression(source) {
+                if (source[0].type === 'Number') {
+                    let node = {
+                        type: 'MultiplicativeExpression',
+                        children: source[0],
+                    };
+                    source[0] = node;
+                    return MultiplicativeExpression(source);
+                }
+
+                if (
+                    source[0].type === 'MultiplicativeExpression' &&
+                    source[1] &&
+                    source[1].type === '*'
+                ) {
+                    let node = {
+                        type: 'MultiplicativeExpression',
+                        operator: '*',
+                        children: [],
+                    };
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    source.unshift(node);
+                    return MultiplicativeExpression(source);
+                }
+
+                if (
+                    source[0].type === 'MultiplicativeExpression' &&
+                    source[1] &&
+                    source[1].type === '/'
+                ) {
+                    let node = {
+                        type: 'MultiplicativeExpression',
+                        operator: '/',
+                        children: [],
+                    };
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    source.unshift(node);
+                    return MultiplicativeExpression(source);
+                }
+
+                if (source[0].type === 'MultiplicativeExpression') {
+                    return source[0];
+                }
+
+                return MultiplicativeExpression(source);
             }
+
+            console.log(AdditiveExpression(source));
         </script>
     </body>
 </html>
